--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,15 @@
 {
-    "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/contacts/(.*)",
-            "dest": "/routes/contacts/$1.js"
-        },
-        {
-            "src": "/api/auth/(.*)",
-            "dest": "/routes/auth/$1.js"
-        },
-        {
-            "src": "/api/users/(.*)",
-            "dest": "/routes/users/$1.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
-        }
-    ]
+	"version": 2,
+	"builds": [
+		{
+			"src": "./index.js",
+			"use": "@vercel/node"
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "/"
+		}
+	]
 }
