--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "contact-management",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "./api/index.js",
   "engines": {
     "node": "16.20.2"
   },
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node ./api/index.js",
+    "server": "nodemon ./api/index.js",
     "client": "npm start --prefix ../client",
     "clientinstall": "npm install --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
